Upgrade build and dependencies